log
Sat Mar 25 18:18:47 -03 2023: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f3de3e5
Sat Mar 25 18:19:26 -03 2023: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8ad5038
Sat Mar 25 18:21:20 -03 2023: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
./list.c:48:1: error: non-void function does not return a value in all control paths [-Werror,-Wreturn-type]
}
^
1 error generated.
Compilation failed
c3e24a8
Sat Mar 25 18:22:35 -03 2023: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
fe67dd8
Sat Mar 25 18:32:18 -03 2023: 
 list.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  0|0
c8fb488
Sat Mar 25 18:34:08 -03 2023: 
 list.c | 6 ------
 1 file changed, 6 deletions(-)
In file included from test.c:5:
./list.c:55:1: error: non-void function does not return a value [-Werror,-Wreturn-type]
}
^
1 error generated.
Compilation failed
0ae152e
Sat Mar 25 18:34:23 -03 2023: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
bb0bf6a
Sat Mar 25 18:35:46 -03 2023: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
ad9338e
Sat Mar 25 18:37:24 -03 2023: 
 list.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 25/70
382945e
Sat Mar 25 18:38:26 -03 2023: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e3189e8
Sat Mar 25 18:38:35 -03 2023: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
cf926f9
Sat Mar 25 18:39:28 -03 2023: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
f98b137
Sat Mar 25 18:40:57 -03 2023: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
3e2dea5
Sat Mar 25 19:11:35 -03 2023: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  9|3
total_score: 35/70
ab482b1
Sat Mar 25 19:27:43 -03 2023: 
 list.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  9|3
total_score: 35/70
6814a50
Sat Mar 25 19:28:01 -03 2023: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  10|2
total_score: 45/70
1894286
Sat Mar 25 19:30:09 -03 2023: 
 list.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  10|2
total_score: 45/70
693a8a6
Sat Mar 25 19:34:14 -03 2023: 
 list.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  10|2
total_score: 45/70
940a93e
Sat Mar 25 19:34:45 -03 2023: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
a05e70d
Sat Mar 25 20:09:21 -03 2023: 
 list.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
0e1f468
Sat Mar 25 20:10:41 -03 2023: 
 list.c | 13 -------------
 1 file changed, 13 deletions(-)
 tests:  10|2
total_score: 45/70
e5d8df0
Sat Mar 25 20:17:53 -03 2023: 
 list.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:
./list.c:117:9: error: void function 'pushCurrent' should not return a value [-Wreturn-type]
        return NULL;
        ^      ~~~~
1 error generated.
Compilation failed
37de5f5
Sat Mar 25 20:18:03 -03 2023: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
2d503bc
Sat Mar 25 20:18:50 -03 2023: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  11|1
total_score: 55/70
7a3af94
Sat Mar 25 20:21:21 -03 2023: 
 list.c | 18 ++++--------------
 1 file changed, 4 insertions(+), 14 deletions(-)
In file included from test.c:5:
./list.c:136:12: error: unused variable 'data' [-Werror,-Wunused-variable]
    void * data =  eliminarNodo->data;
           ^
./list.c:139:1: error: non-void function does not return a value [-Werror,-Wreturn-type]
}
^
2 errors generated.
Compilation failed
c884472
Sat Mar 25 20:21:33 -03 2023: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
76e91aa
Sat Mar 25 20:22:15 -03 2023: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
In file included from test.c:5:
./list.c:136:1: error: non-void function does not return a value [-Werror,-Wreturn-type]
}
^
1 error generated.
Compilation failed
d29a12d
